--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.10.0",
+    "react-gtm-module": "^2.0.11",
+    "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "web-vitals": "^2.1.4"
