--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
+    "react-router": "^7.1.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
